fix(frontend): improve responsiveness on smaller screens

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,49 +9,6 @@ body {
   padding: 0;
 }
 
-.Sidebar {
-  height: 100%;
-  width: 300px;
-  background-color: #648386;
-}
-
-.SidebarList {
-  height: auto;
-  padding: 0;
-  width: 100%;
-}
-
-.SidebarLogo {
-  height: auto;
-  padding: 0;
-  width: 20%;
-}
-
-.SidebarList .row {
-  user-select: none;
-  width: 100%;
-  height: 60px;
-  list-style-type: none;
-  margin: 0;
-  display: flex;
-  flex-direction: row;
-  color: white;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
-  font-size: 23px;
-}
-
-.SidebarList .row:hover {
-  cursor: pointer;
-  background-color: #5e8b8f;
-}
-
-.SidebarList .row:active {
-  background-color: #557b7f;
-}
-
 .row #icon {
   flex: 30%;
   display: grid;
@@ -98,13 +55,11 @@ body {
   position: relative;
   margin: 1% 1% 1% 1%;
   padding: 10px 5px 10px 5px;
-  width: 98%;
   height: 95%;
   border: 2px solid #dbdbe2;
   border-radius: 10px;
   background-color: white;
   overflow: hidden;
-  min-width: 600px;
 }
 
 .chatInputs {
@@ -254,9 +209,8 @@ body {
 }
 
 .message__name {
+  display: block;
   font-size: 10pt;
-  display: flex;
-  gap: 5px;
 }
 
 .message--right {
@@ -286,10 +240,6 @@ body {
 .message--bot .message__bubble{
   background-color: #dcfbfd;
   border-color: #b7d5d7;
-}
-
-.bold {
-  font-weight: bold;
 }
 
 .chooseThread {
